--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "@example/basics",
+  "name": "Thiago Pereira",
+  "author": "Thiago Pereira",
+  "description": "Thiago Pereira's personal website",
+  "license": "MIT",
+  "homepage": "http://thiago-pereira.dev",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "astro dev",
