--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Thiago Pereira",
+  "name": "Thiago Pereira' site",
   "author": "Thiago Pereira",
-  "description": "Thiago Pereira's personal website",
+  "description": "Thiago Pereira's personal site",
   "license": "MIT",
   "homepage": "http://thiago-pereira.dev",
   "type": "module",
