--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "@astrojs/partytown": "^1.0.3",
-    "astro": "^2.0.0"
+    "astro": "^3.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
   }
 }
