--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "astro": "^4.2.4"
   },
   "devDependencies": {
+    "prettier": "^3.2.4",
+    "prettier-plugin-astro": "^0.13.0",
     "typescript": "^5.2.2"
   }
 }
